[package]
name = "arcstar"
version = "0.1.0"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"
description = "Implements the arcstar (Arc*) Event Camera corner/feature detector."
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/tstellanova/arcstar"



[dependencies]
arrayvec = "0.4.10"
nalgebra = "0.18.0"


[dev-dependencies]
assert_approx_eq = "1.1.0"
criterion = "0.2"
rand = "0.6.5"

